--- a/action.yaml
+++ b/action.yaml
@@ -53,9 +53,13 @@ runs:
       shell: bash
 
     - name: Create Pull Request
-      uses: peter-evans/create-pull-request@v3
+      uses: peter-evans/create-pull-request@v6
       with:
         token: ${{ inputs.githubToken }}
-        commit-message: "fix: update ${{ inputs.libraryName }} to ${{ inputs.tagName }}"
+        commit-message: |
+          "fix: update ${{ inputs.libraryName }} to ${{ inputs.tagName }}
+
+          https://github.com/${{ inputs.libraryName }}/releases/tag/${{ inputs.tagName }}
+          "
         title: "update ${{ inputs.libraryName }} to ${{ inputs.tagName }}"
         branch: "update-${{ env.FORMATTED_NAME }}-${{ inputs.tagName }}"
