--- a/action.yaml
+++ b/action.yaml
@@ -59,7 +59,6 @@ runs:
         commit-message: |
           "fix: update ${{ inputs.libraryName }} to ${{ inputs.tagName }}
 
-          https://github.com/${{ inputs.libraryName }}/releases/tag/${{ inputs.tagName }}
-          "
+          https://github.com/${{ inputs.libraryName }}/releases/tag/${{ inputs.tagName }}"
         title: "update ${{ inputs.libraryName }} to ${{ inputs.tagName }}"
         branch: "update-${{ env.FORMATTED_NAME }}-${{ inputs.tagName }}"
