--- a/action.yaml
+++ b/action.yaml
@@ -57,8 +57,8 @@ runs:
       with:
         token: ${{ inputs.githubToken }}
         commit-message: |
-          "fix: update ${{ inputs.libraryName }} to ${{ inputs.tagName }}
+          fix: update ${{ inputs.libraryName }} to ${{ inputs.tagName }}
 
-          https://github.com/${{ inputs.libraryName }}/releases/tag/${{ inputs.tagName }}"
+          https://github.com/${{ inputs.libraryName }}/releases/tag/${{ inputs.tagName }}
         title: "update ${{ inputs.libraryName }} to ${{ inputs.tagName }}"
         branch: "update-${{ env.FORMATTED_NAME }}-${{ inputs.tagName }}"
