Squashed commit of the following:
commit 6401aa632430e91600dcb6e0d33af14990fe6ed5
Author: Marc Güell Segarra <marc@ondori.dev>
Date:   Thu Jul 18 11:20:34 2024 +0200

    fix: add release type behaviour

commit db339742129ab54ab55f346479c2dfbddd750e79
Author: Marc Güell Segarra <marc@ondori.dev>
Date:   Thu Jul 18 11:10:36 2024 +0200

    fix: commit-message

commit c18c8ba98f54e030d1a1f754c9de83e4b2a35447
Author: Marc Güell Segarra <marc@ondori.dev>
Date:   Thu Jul 18 10:39:38 2024 +0200

    fix: typo

commit b00d3ee271a268ec203d046b7881783028f3ef7a
Author: Marc Güell Segarra <marc@ondori.dev>
Date:   Thu Jul 18 09:56:59 2024 +0200

    update create-pr version and add commit description to release link

--- a/action.yaml
+++ b/action.yaml
@@ -16,6 +16,9 @@ inputs:
   githubToken:
     description: "GitHub token for authentication"
     required: true
+  releaseType:
+    description: "Type of release (e.g., minor, major, patch)"
+    required: true
 
 runs:
   using: "composite"
@@ -52,10 +55,30 @@ runs:
         echo "FORMATTED_NAME=$FORMATTED_NAME" >> $GITHUB_ENV
       shell: bash
 
+    - name: Determine Commit Message
+      id: commit-message
+      run: |
+        RELEASE_TYPE=${{ inputs.releaseType }}
+        if [[ "$RELEASE_TYPE" == "patch" ]]; then
+          PREFIX="fix"
+        elif [[ "$RELEASE_TYPE" == "minor" ]]; then
+          PREFIX="feat"
+        elif [[ "$RELEASE_TYPE" == "major" ]]; then
+          PREFIX="feat"
+          BREAKING_CHANGE="BREAKING CHANGE: bump major version"
+          echo "BREAKING_CHANGE=$BREAKING_CHANGE" >> $GITHUB_ENV
+        fi
+        echo "PREFIX=$PREFIX" >> $GITHUB_ENV
+      shell: bash
+
     - name: Create Pull Request
-      uses: peter-evans/create-pull-request@v3
+      uses: peter-evans/create-pull-request@v6
       with:
         token: ${{ inputs.githubToken }}
-        commit-message: "fix: update ${{ inputs.libraryName }} to ${{ inputs.tagName }}"
+        commit-message: |
+          ${{ env.PREFIX }}: update ${{ inputs.libraryName }} to ${{ inputs.tagName }}
+
+          ${{ env.BREAKING_CHANGE }}
+          https://github.com/${{ inputs.libraryName }}/releases/tag/${{ inputs.tagName }}
         title: "update ${{ inputs.libraryName }} to ${{ inputs.tagName }}"
         branch: "update-${{ env.FORMATTED_NAME }}-${{ inputs.tagName }}"
